# unitree_nav

./: .gitignore  README.md  nav.repos
unitree_nav/: CMakeLists.txt  package.xml
unitree_nav/config/: control.rviz  nav.rviz  nav2_params.yaml  nav2_params_guide_dog.yaml
unitree_nav/launch/: control.launch.py  mapping.launch.py  rslidar_robosense.launch.py  unitree_nav.launch.py
unitree_nav/src/: cmd_processor.cpp  nav_to_pose.cpp  odometry.cpp
unitree_nav_interfaces/: CMakeLists.txt  package.xml
unitree_nav_interfaces/srv/: NavToPose.srv  SetBodyRPY.srv  SetGait.srv
unitree_nav_launch_module/: package.xml  setup.cfg  setup.py
unitree_nav_launch_module/unitree_nav_launch_module/: __init__.py  ternary_text_substitution.py
